fixed issue with new date() on safari

--- a/src/components/PostCard.css
+++ b/src/components/PostCard.css
@@ -22,6 +22,8 @@
 
 .PostCard--Image .Image {
   transition: 0.3s ease all;
+  border-top-right-radius: 10px;
+  border-top-left-radius: 10px;
 }
 
 .PostCard:hover .PostCard--Image .Image,
